@@ -52,11 +52,13 @@ Contributors:
     - Martin Guy
         - patch to enable automotive AVR32 flashing without a timeout
     - Simon Large
-        - Fix atmel_reset function
-        - Get rid of compiler warnings around fprintf statements
-        - Fix build system for selecting libusb-1.0
+        - fix atmel_reset function
+        - get rid of compiler warnings around fprintf statements
+        - fix build system for selecting libusb-1.0
         - atmega16u2 support
         - better support for Windows users
+        - improve layout of help text
+        - add security fuse support for AVR32
     - Johannes Carlsson
         - patch to fix use of libusb in configure.ac
     - Grégory S.
